--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 @STRING{CVPR = {Proc. of Computer Vision and Pattern Recognition}}
 @STRING{ECCV = {Proc. of European Conference on Computer Vision}}
 @STRING{ICCV = {Proc. of International Conference on Computer Vision}}
-@STRING{NIPS = {Proc. of Neural Information Processing Systems}}
+@STRING{NIPS = {Proc. of Advances in Neural Information Processing Systems}}
 @STRING{ICML = {Proc. of International Conference on Machine Learning}}
 @STRING{AAAI = {Proc. of the AAAI Conference on Artificial Intelligence}}
 @STRING{ICCP = {Proc. of International Conference on Computational Photography}}
@@ -31,6 +31,18 @@
 @STRING{ECCVW = {Proc. of European Conference on Computer Vision Workshops}}
 @STRING{ICCVW = {Proc. of International Conference on Computer Vision Workshops}}
 
+@inproceedings{han2020neuromorphic,
+    abbr={CVPR},
+    bibtex_show={true},
+    pdf={https://openaccess.thecvf.com/content_CVPR_2020/papers/Han_Neuromorphic_Camera_Guided_High_Dynamic_Range_Imaging_CVPR_2020_paper.pdf},
+	supp={https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Han_Neuromorphic_Camera_Guided_CVPR_2020_supplemental.pdf},
+	title={Neuromorphic Camera Guided High Dynamic Range Imaging},
+	author={Han, Jin and Zhou, Chu and Duan, Peiqi and Tang, Yehui and Xu, Chang and Xu, Chao and Huang, Tiejun and Shi, Boxin},
+	booktitle=CVPR,
+	pages={1730--1739},
+	year={2020}
+}
+
 @inproceedings{zhou2020unmodnet,
     abbr={NIPS},
     bibtex_show={true},
@@ -43,16 +55,16 @@
 	year = {2020}
 }
 
-@inproceedings{han2020neuromorphic,
-    abbr={CVPR},
+@inproceedings{han2021evintsr,
+    abbr={ICCV},
     bibtex_show={true},
-    pdf={https://openaccess.thecvf.com/content_CVPR_2020/papers/Han_Neuromorphic_Camera_Guided_High_Dynamic_Range_Imaging_CVPR_2020_paper.pdf},
-	supp={https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Han_Neuromorphic_Camera_Guided_CVPR_2020_supplemental.pdf},
-	title={Neuromorphic Camera Guided High Dynamic Range Imaging},
-	author={Han, Jin and Zhou, Chu and Duan, Peiqi and Tang, Yehui and Xu, Chang and Xu, Chao and Huang, Tiejun and Shi, Boxin},
-	booktitle=CVPR,
-	pages={1730--1739},
-	year={2020}
+	pdf = {https://openaccess.thecvf.com/content/ICCV2021/papers/Han_EvIntSR-Net_Event_Guided_Multiple_Latent_Frames_Reconstruction_and_Super-Resolution_ICCV_2021_paper.pdf},
+	supp = {https://openaccess.thecvf.com/content/ICCV2021/supplemental/Han_EvIntSR-Net_Event_Guided_ICCV_2021_supplemental.pdf},
+	title = {EvIntSR-Net: Event Guided Multiple Latent Frames Reconstruction and Super-resolution},
+	author = {Han, Jin and Yang, Yixin and Zhou, Chu and Xu, Chao and Shi, Boxin},
+	booktitle = ICCV,
+	pages = {4882--4891},
+	year = {2021}
 }
 
 @inproceedings{zhou2021learning,
@@ -67,14 +79,61 @@
 	year = {2021}
 }
 
-@inproceedings{han2021evintsr,
-    abbr={ICCV},
-    bibtex_show={true},
-	pdf = {https://openaccess.thecvf.com/content/ICCV2021/papers/Han_EvIntSR-Net_Event_Guided_Multiple_Latent_Frames_Reconstruction_and_Super-Resolution_ICCV_2021_paper.pdf},
-	supp = {https://openaccess.thecvf.com/content/ICCV2021/supplemental/Han_EvIntSR-Net_Event_Guided_ICCV_2021_supplemental.pdf},
-	title = {EvIntSR-Net: Event Guided Multiple Latent Frames Reconstruction and Super-resolution},
-	author = {Han, Jin and Yang, Yixin and Zhou, Chu and Xu, Chao and Shi, Boxin},
-	booktitle = ICCV,
-	pages = {4882--4891},
-	year = {2021}
+@inproceedings{zhou2021delieve,
+  abbr={ICCVW},
+  bibtex_show={true},
+  pdf={https://openaccess.thecvf.com/content/ICCV2021W/PBDL/papers/Zhou_DeLiEve-Net_Deblurring_Low-Light_Images_With_Light_Streaks_and_Local_Events_ICCVW_2021_paper.pdf},
+  supp={https://openaccess.thecvf.com/content/ICCV2021W/PBDL/supplemental/Zhou_DeLiEve-Net_Deblurring_Low-Light_ICCVW_2021_supplemental.pdf},
+  title={{DeLiEve-Net}: Deblurring Low-Light Images with Light Streaks and Local Events},
+  author={Zhou, Chu and Teng, Minggui and Han, Jin and Xu, Chao and Shi, Boxin},
+  booktitle=ICCVW,
+  pages={1155--1164},
+  year={2021}
+}
+
+@inproceedings{teng2022nest,
+  abbr={ECCV},
+  bibtex_show={true},
+  pdf={https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136660649.pdf},
+  supp={https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136660649-supp.pdf},
+  title={{NEST}: Neural Event Stack for Event-Based Image Enhancement},
+  author={Teng, Minggui and Zhou, Chu and Lou, Hanyue and Shi, Boxin},
+  booktitle=ECCV,
+  pages={660--676},
+  year={2022}
+}
+
+@inproceedings{zhang2022data,
+  abbr={ECCV},
+  bibtex_show={true},
+  pdf={https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136670071.pdf},
+  supp={https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136670071-supp.pdf},
+  title={Data Association Between Event Streams and Intensity Frames Under Diverse Baselines},
+  author={Zhang, Dehao and Ding, Qiankun and Duan, Peiqi and Zhou, Chu and Shi, Boxin},
+  booktitle=ECCV,
+  pages={72--90},
+  year={2022}
+}
+
+@article{han2023hybrid,
+  abbr={PAMI},
+  bibtex_show={true},
+  pdf={https://ieeexplore.ieee.org/abstract/document/10036136},
+  supp={https://drive.google.com/file/d/1gfdc9axSIHO3OOIXL6yTCGljj1l54gqO/view?usp=sharing},
+  title={Hybrid High Dynamic Range Imaging fusing Neuromorphic and Conventional Images},
+  author={Han, Jin and Yang, Yixin and Duan, Peiqi and Zhou, Chu and Ma, Lei and Xu, Chao and Huang, Tiejun and Sato, Imari and Shi, Boxin},
+  journal=PAMI,
+  year={2023}
+}
+
+@article{zhou2023deblurring,
+  abbr={IJCV},
+  bibtex_show={true},
+  pdf={https://link.springer.com/article/10.1007/s11263-023-01754-5},
+  supp={https://ci.idm.pku.edu.cn/Zhou_IJCV23.pdf},
+  title={Deblurring Low-Light Images with Events},
+  author={Zhou, Chu and Teng, Minggui and Han, Jin and Liang, Jinxiu and Xu, Chao and Cao, Gang and Shi, Boxin},
+  journal=IJCV,
+  pages={1--15},
+  year={2023}
 }
