--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -149,7 +149,7 @@
   year={2023}
 }
 
-@article{zhou2023polarizationguided,
+@article{zhou2023polarization,
   abbr={TIP},
   bibtex_show={true},
   pdf={https://ieeexplore.ieee.org/document/10061479},
