--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,23 +48,23 @@
     bibtex_show={true},
     pdf={https://proceedings.neurips.cc/paper/2020/file/1102a326d5f7c9e04fc3c89d0ede88c9-Paper.pdf},
     supp={https://proceedings.neurips.cc/paper/2020/file/1102a326d5f7c9e04fc3c89d0ede88c9-Supplemental.pdf},
-	title = {UnModNet: Learning to Unwrap a Modulo Image for High Dynamic Range Imaging},
-	author = {Zhou, Chu and Zhao, Hang and Han, Jin and Xu, Chang and Xu, Chao and Huang, Tiejun and Shi, Boxin},
-	booktitle = NIPS,
-	pages = {1559--1570},
-	year = {2020}
+	title={UnModNet: Learning to Unwrap a Modulo Image for High Dynamic Range Imaging},
+	author={Zhou, Chu and Zhao, Hang and Han, Jin and Xu, Chang and Xu, Chao and Huang, Tiejun and Shi, Boxin},
+	booktitle=NIPS,
+	pages={1559--1570},
+	year={2020}
 }
 
 @inproceedings{han2021evintsr,
     abbr={ICCV},
     bibtex_show={true},
-	pdf = {https://openaccess.thecvf.com/content/ICCV2021/papers/Han_EvIntSR-Net_Event_Guided_Multiple_Latent_Frames_Reconstruction_and_Super-Resolution_ICCV_2021_paper.pdf},
-	supp = {https://openaccess.thecvf.com/content/ICCV2021/supplemental/Han_EvIntSR-Net_Event_Guided_ICCV_2021_supplemental.pdf},
-	title = {EvIntSR-Net: Event Guided Multiple Latent Frames Reconstruction and Super-resolution},
-	author = {Han, Jin and Yang, Yixin and Zhou, Chu and Xu, Chao and Shi, Boxin},
-	booktitle = ICCV,
-	pages = {4882--4891},
-	year = {2021}
+	pdf={https://openaccess.thecvf.com/content/ICCV2021/papers/Han_EvIntSR-Net_Event_Guided_Multiple_Latent_Frames_Reconstruction_and_Super-Resolution_ICCV_2021_paper.pdf},
+	supp={https://openaccess.thecvf.com/content/ICCV2021/supplemental/Han_EvIntSR-Net_Event_Guided_ICCV_2021_supplemental.pdf},
+	title={EvIntSR-Net: Event Guided Multiple Latent Frames Reconstruction and Super-resolution},
+	author={Han, Jin and Yang, Yixin and Zhou, Chu and Xu, Chao and Shi, Boxin},
+	booktitle=ICCV,
+	pages={4882--4891},
+	year={2021}
 }
 
 @inproceedings{zhou2021learning,
@@ -72,11 +72,11 @@
     bibtex_show={true},
 	pdf={https://papers.nips.cc/paper/2021/file/5fd0b37cd7dbbb00f97ba6ce92bf5add-Paper.pdf},
 	supp={https://papers.nips.cc/paper/2021/file/5fd0b37cd7dbbb00f97ba6ce92bf5add-Supplemental.pdf},
-	title = {Learning to Dehaze with Polarization},
-	author = {Zhou, Chu and Teng, Minggui and Han, Yufei and Xu, Chao and Shi, Boxin},
-	booktitle = NIPS,
-	pages = {11487--11500},
-	year = {2021}
+	title={Learning to Dehaze with Polarization},
+	author={Zhou, Chu and Teng, Minggui and Han, Yufei and Xu, Chao and Shi, Boxin},
+	booktitle=NIPS,
+	pages={11487--11500},
+	year={2021}
 }
 
 @inproceedings{zhou2021delieve,
@@ -134,18 +134,21 @@
   title={Deblurring Low-Light Images with Events},
   author={Zhou, Chu and Teng, Minggui and Han, Jin and Liang, Jinxiu and Xu, Chao and Cao, Gang and Shi, Boxin},
   journal=IJCV,
-  pages={1--15},
-  year={2023}
+  volume={131},
+  number={5},
+  pages={1284--1298},
+  year={2023},
 }
 
 @inproceedings{zhou2023polarizationaware,
   abbr={AAAI},
   bibtex_show={true},
-  pdf={https://camera.pku.edu.cn/Zhou_AAAI23.pdf},
+  pdf={https://ojs.aaai.org/index.php/AAAI/article/download/25486/25258},
   supp={https://camera.pku.edu.cn/Zhou_AAAI23.pdf},
   title={Polarization-Aware Low-Light Image Enhancement},
   author={Zhou, Chu and Teng, Minggui and Lyu, Youwei and Li, Si and Xu, Chao and Shi, Boxin},
   booktitle=AAAI,
+  pages={3742--3750},
   year={2023}
 }
 
@@ -165,9 +168,12 @@
 @inproceedings{chang2023fps,
   abbr={CVPR},
   bibtex_show={true},
+  pdf={https://openaccess.thecvf.com/content/CVPR2023/papers/Chang_1000_FPS_HDR_Video_With_a_Spike-RGB_Hybrid_Camera_CVPR_2023_paper.pdf},
+  supp={https://openaccess.thecvf.com/content/CVPR2023/supplemental/Chang_1000_FPS_HDR_CVPR_2023_supplemental.pdf},
   title={1000 FPS HDR Video with a Spike-RGB Hybrid Camera},
   author={Chang, Yakun and Zhou, Chu and Hong, Yuchen and Hu, Liwen and Xu, Chao and Huang, Tiejun and Shi, Boxin},
   booktitle=CVPR,
+  pages={22180--22190},
   year={2023}
 }
 
