--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -84,7 +84,7 @@
   bibtex_show={true},
   pdf={https://openaccess.thecvf.com/content/ICCV2021W/PBDL/papers/Zhou_DeLiEve-Net_Deblurring_Low-Light_Images_With_Light_Streaks_and_Local_Events_ICCVW_2021_paper.pdf},
   supp={https://openaccess.thecvf.com/content/ICCV2021W/PBDL/supplemental/Zhou_DeLiEve-Net_Deblurring_Low-Light_ICCVW_2021_supplemental.pdf},
-  title={{DeLiEve-Net}: Deblurring Low-Light Images with Light Streaks and Local Events},
+  title={DeLiEve-Net: Deblurring Low-Light Images with Light Streaks and Local Events},
   author={Zhou, Chu and Teng, Minggui and Han, Jin and Xu, Chao and Shi, Boxin},
   booktitle=ICCVW,
   pages={1155--1164},
@@ -96,7 +96,7 @@
   bibtex_show={true},
   pdf={https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136660649.pdf},
   supp={https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136660649-supp.pdf},
-  title={{NEST}: Neural Event Stack for Event-Based Image Enhancement},
+  title={NEST: Neural Event Stack for Event-Based Image Enhancement},
   author={Teng, Minggui and Zhou, Chu and Lou, Hanyue and Shi, Boxin},
   booktitle=ECCV,
   pages={660--676},
@@ -123,6 +123,8 @@
   title={Hybrid High Dynamic Range Imaging fusing Neuromorphic and Conventional Images},
   author={Han, Jin and Yang, Yixin and Duan, Peiqi and Zhou, Chu and Ma, Lei and Xu, Chao and Huang, Tiejun and Sato, Imari and Shi, Boxin},
   journal=PAMI,
+  volume={45},
+  pages={8553--8565},
   year={2023}
 }
 
@@ -135,7 +137,6 @@
   author={Zhou, Chu and Teng, Minggui and Han, Jin and Liang, Jinxiu and Xu, Chao and Cao, Gang and Shi, Boxin},
   journal=IJCV,
   volume={131},
-  number={5},
   pages={1284--1298},
   year={2023},
 }
