update website design

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
 @STRING{BMVC = {Proc. of British Machine Vision}}
 @STRING{PAMI = {IEEE Transactions on Pattern Analysis and Machine Intelligence}}
 @STRING{TIP = {IEEE Transactions on Image Processing}}
-@STRING{TM = {IEEE Transactions on Multimedia}}
+@STRING{TMM = {IEEE Transactions on Multimedia}}
 @STRING{TNN = {IEEE Transactions on Neural Networks}}
 @STRING{TNNLS = {IEEE Transactions on Neural Networks and Learning Systems}}
 @STRING{IJCV = {International Journal of Computer Vision}}
@@ -31,150 +31,117 @@
 @STRING{ECCVW = {Proc. of European Conference on Computer Vision Workshops}}
 @STRING{ICCVW = {Proc. of International Conference on Computer Vision Workshops}}
 
-@inproceedings{han2020neuromorphic,
-    abbr={CVPR},
-    bibtex_show={true},
-    pdf={https://openaccess.thecvf.com/content_CVPR_2020/papers/Han_Neuromorphic_Camera_Guided_High_Dynamic_Range_Imaging_CVPR_2020_paper.pdf},
-	supp={https://openaccess.thecvf.com/content_CVPR_2020/supplemental/Han_Neuromorphic_Camera_Guided_CVPR_2020_supplemental.pdf},
-	title={Neuromorphic Camera Guided High Dynamic Range Imaging},
-	author={Han, Jin and Zhou, Chu and Duan, Peiqi and Tang, Yehui and Xu, Chang and Xu, Chao and Huang, Tiejun and Shi, Boxin},
-	booktitle=CVPR,
-	pages={1730--1739},
-	year={2020}
-}
-
-@inproceedings{zhou2020unmodnet,
-    abbr={NIPS},
-    bibtex_show={true},
-    pdf={https://proceedings.neurips.cc/paper/2020/file/1102a326d5f7c9e04fc3c89d0ede88c9-Paper.pdf},
-    supp={https://proceedings.neurips.cc/paper/2020/file/1102a326d5f7c9e04fc3c89d0ede88c9-Supplemental.pdf},
-	title={UnModNet: Learning to Unwrap a Modulo Image for High Dynamic Range Imaging},
-	author={Zhou, Chu and Zhao, Hang and Han, Jin and Xu, Chang and Xu, Chao and Huang, Tiejun and Shi, Boxin},
-	booktitle=NIPS,
-	pages={1559--1570},
-	year={2020}
-}
-
-@inproceedings{han2021evintsr,
-    abbr={ICCV},
-    bibtex_show={true},
-	pdf={https://openaccess.thecvf.com/content/ICCV2021/papers/Han_EvIntSR-Net_Event_Guided_Multiple_Latent_Frames_Reconstruction_and_Super-Resolution_ICCV_2021_paper.pdf},
-	supp={https://openaccess.thecvf.com/content/ICCV2021/supplemental/Han_EvIntSR-Net_Event_Guided_ICCV_2021_supplemental.pdf},
-	title={EvIntSR-Net: Event Guided Multiple Latent Frames Reconstruction and Super-resolution},
-	author={Han, Jin and Yang, Yixin and Zhou, Chu and Xu, Chao and Shi, Boxin},
-	booktitle=ICCV,
-	pages={4882--4891},
-	year={2021}
-}
-
 @inproceedings{zhou2021learning,
-    abbr={NIPS},
-    bibtex_show={true},
+  bibtex_show={true},
 	pdf={https://papers.nips.cc/paper/2021/file/5fd0b37cd7dbbb00f97ba6ce92bf5add-Paper.pdf},
 	supp={https://papers.nips.cc/paper/2021/file/5fd0b37cd7dbbb00f97ba6ce92bf5add-Supplemental.pdf},
 	title={Learning to Dehaze with Polarization},
+  thumbnail={/assets/img/poldehaze-thumb.png},
 	author={Zhou, Chu and Teng, Minggui and Han, Yufei and Xu, Chao and Shi, Boxin},
 	booktitle=NIPS,
 	pages={11487--11500},
-	year={2021}
-}
-
-@inproceedings{zhou2021delieve,
-  abbr={ICCVW},
-  bibtex_show={true},
-  pdf={https://openaccess.thecvf.com/content/ICCV2021W/PBDL/papers/Zhou_DeLiEve-Net_Deblurring_Low-Light_Images_With_Light_Streaks_and_Local_Events_ICCVW_2021_paper.pdf},
-  supp={https://openaccess.thecvf.com/content/ICCV2021W/PBDL/supplemental/Zhou_DeLiEve-Net_Deblurring_Low-Light_ICCVW_2021_supplemental.pdf},
-  title={DeLiEve-Net: Deblurring Low-Light Images with Light Streaks and Local Events},
-  author={Zhou, Chu and Teng, Minggui and Han, Jin and Xu, Chao and Shi, Boxin},
-  booktitle=ICCVW,
-  pages={1155--1164},
-  year={2021}
+	year={2021},
+  selected={true}
 }
 
 @inproceedings{teng2022nest,
-  abbr={ECCV},
   bibtex_show={true},
   pdf={https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136660649.pdf},
   supp={https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136660649-supp.pdf},
+  code={https://github.com/ChipsAhoyM/NEST},
+  thumbnail={/assets/img/nest-thumb.png},
   title={NEST: Neural Event Stack for Event-Based Image Enhancement},
   author={Teng, Minggui and Zhou, Chu and Lou, Hanyue and Shi, Boxin},
   booktitle=ECCV,
   pages={660--676},
-  year={2022}
+  year={2022},
+  selected={true}
 }
 
-@inproceedings{zhang2022data,
-  abbr={ECCV},
+@inproceedings{lou2023all,
   bibtex_show={true},
-  pdf={https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136670071.pdf},
-  supp={https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136670071-supp.pdf},
-  title={Data Association Between Event Streams and Intensity Frames Under Diverse Baselines},
-  author={Zhang, Dehao and Ding, Qiankun and Duan, Peiqi and Zhou, Chu and Shi, Boxin},
-  booktitle=ECCV,
-  pages={72--90},
-  year={2022}
+  pdf={https://openaccess.thecvf.com/content/CVPR2023/papers/Lou_All-in-Focus_Imaging_From_Event_Focal_Stack_CVPR_2023_paper.pdf},
+  supp={https://openaccess.thecvf.com/content/CVPR2023/supplemental/Lou_All-in-Focus_Imaging_From_CVPR_2023_supplemental.pdf},
+  code={https://github.com/HYLZ-2019/EFS},
+  website={https://hylz-2019.github.io/blog/2023/aif-efs/},
+  thumbnail={/assets/img/efs-thumb.png},
+  title={All-in-focus Imaging from Event Focal Stack},
+  author={Lou*, Hanyue and Teng*, Minggui and Yang, Yixin and Shi, Boxin},
+  booktitle=CVPR,
+  pages={17366--17375},
+  year={2023},
+  selected={true}
 }
 
-@article{han2023hybrid,
-  abbr={PAMI},
+@article{chen2023residual,
   bibtex_show={true},
-  pdf={https://ieeexplore.ieee.org/abstract/document/10036136},
-  supp={https://drive.google.com/file/d/1gfdc9axSIHO3OOIXL6yTCGljj1l54gqO/view?usp=sharing},
-  title={Hybrid High Dynamic Range Imaging fusing Neuromorphic and Conventional Images},
-  author={Han, Jin and Yang, Yixin and Duan, Peiqi and Zhou, Chu and Ma, Lei and Xu, Chao and Huang, Tiejun and Sato, Imari and Shi, Boxin},
-  journal=PAMI,
-  volume={45},
-  pages={8553--8565},
-  year={2023}
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9860082},
+  supp={https://ieeexplore.ieee.org/ielx7/6046/10016790/9860082/supp1-3199556.mp4?arnumber=9860082},
+  thumbnail={/assets/img/resevdeblur-thumb.png},
+  title={A Residual Learning Approach to Deblur and Generate High Frame Rate Video with an Event Camera},
+  author={Chen*, Haoyu and Teng*, Minggui and Shi, Boxin and Wang, Yizhou and Huang, Tiejun},
+  journal=TMM,
+  volume={25},
+  pages={5826--5839},
+  year={2023},
+  publisher={IEEE},
+  selected={true}
 }
+
 
 @article{zhou2023deblurring,
-  abbr={IJCV},
   bibtex_show={true},
   pdf={https://link.springer.com/article/10.1007/s11263-023-01754-5},
-  supp={https://ci.idm.pku.edu.cn/Zhou_IJCV23.pdf},
+  supp={https://assets.ctfassets.net/yreyglvi5sud/2cNqPk1IYVsw1LrsEtwDOV/85dc51aae6250d8545e1ef20af91dde4/Zhou_IJCV23.pdf},
+  code={https://github.com/fourson/Deblurring-Low-Light-Images-with-Events},
+  thumbnail={/assets/img/lowdeblur-thumb.png},
   title={Deblurring Low-Light Images with Events},
   author={Zhou, Chu and Teng, Minggui and Han, Jin and Liang, Jinxiu and Xu, Chao and Cao, Gang and Shi, Boxin},
   journal=IJCV,
   volume={131},
   pages={1284--1298},
   year={2023},
+  selected={false}
 }
 
-@inproceedings{zhou2023polarizationaware,
-  abbr={AAAI},
-  bibtex_show={true},
-  pdf={https://ojs.aaai.org/index.php/AAAI/article/download/25486/25258},
-  supp={https://camera.pku.edu.cn/Zhou_AAAI23.pdf},
-  title={Polarization-Aware Low-Light Image Enhancement},
-  author={Zhou, Chu and Teng, Minggui and Lyu, Youwei and Li, Si and Xu, Chao and Shi, Boxin},
-  booktitle=AAAI,
-  pages={3742--3750},
-  year={2023}
-}
 
 @article{zhou2023polarization,
-  abbr={TIP},
   bibtex_show={true},
   pdf={https://ieeexplore.ieee.org/document/10061479},
-  supp={https://camera.pku.edu.cn/Zhou_TIP23.pdf},
+  supp={https://downloads.ctfassets.net/yreyglvi5sud/5Id9pFm2jDQst4dxc4BGMo/48437ba7fbcd1c0b5aef7e1523c27aa6/Zhou_TIP23.pdf},
+  code={https://github.com/fourson/Polarization-Guided-HDR-Reconstruction-via-Pixel-Wise-Depolarization},
+  thumbnail={/assets/img/polhdr-thumb.png},
   title={Polarization Guided HDR Reconstruction via Pixel-Wise Depolarization},
   author={Zhou, Chu and Han, Yufei and Teng, Minggui and Han, Jin and Li, Si and Xu, Chao and Shi, Boxin},
   journal=TIP,
   volume={32},
   pages={1774--1787},
-  year={2023}
+  year={2023},
+  selected={false}
 }
 
-@inproceedings{chang2023fps,
-  abbr={CVPR},
+
+@inproceedings{zhou2023polarizationaware,
   bibtex_show={true},
-  pdf={https://openaccess.thecvf.com/content/CVPR2023/papers/Chang_1000_FPS_HDR_Video_With_a_Spike-RGB_Hybrid_Camera_CVPR_2023_paper.pdf},
-  supp={https://openaccess.thecvf.com/content/CVPR2023/supplemental/Chang_1000_FPS_HDR_CVPR_2023_supplemental.pdf},
-  title={1000 FPS HDR Video with a Spike-RGB Hybrid Camera},
-  author={Chang, Yakun and Zhou, Chu and Hong, Yuchen and Hu, Liwen and Xu, Chao and Huang, Tiejun and Shi, Boxin},
-  booktitle=CVPR,
-  pages={22180--22190},
-  year={2023}
+  pdf={https://ojs.aaai.org/index.php/AAAI/article/download/25486/25258},
+  supp={https://downloads.ctfassets.net/yreyglvi5sud/4wLTJsakYbENURRFSnNVVw/7e5749906c466c701d9a0f8219ac57c5/Zhou_AAAI23.pdf},
+  code={https://github.com/fourson/Polarization-Aware-Low-Light-Image-Enhancement},
+  thumbnail={/assets/img/lowpol-thumb.png},
+  title={Polarization-Aware Low-Light Image Enhancement},
+  author={Zhou, Chu and Teng, Minggui and Lyu, Youwei and Li, Si and Xu, Chao and Shi, Boxin},
+  booktitle=AAAI,
+  pages={3742--3750},
+  year={2023},
+  selected={false}
 }
 
+@inproceedings{xia2024nbgtr,
+  bibtex_show={true},
+  website={https://nbgtr.variantconst.com},
+  thumbnail={/assets/img/nbgtr-thumb.png},
+  title={NB-GTR: Narrow-Band Guided Turbulence Removal},
+  author={Xia, Yifei and Zhou, Chu and Zhu, Chengxuan and Teng, Minggui and Xu, Chao and Shi, Boxin},
+  booktitle=CVPR,
+  year={2024},
+  selected={true}
+}
