--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -137,6 +137,8 @@
 
 @inproceedings{xia2024nbgtr,
   bibtex_show={true},
+  pdf={https://openaccess.thecvf.com/content/CVPR2024/papers/Xia_NB-GTR_Narrow-Band_Guided_Turbulence_Removal_CVPR_2024_paper.pdf},
+  supp={https://openaccess.thecvf.com/content/CVPR2024/supplemental/Xia_NB-GTR_Narrow-Band_Guided_CVPR_2024_supplemental.zip},
   website={https://nbgtr.variantconst.com},
   thumbnail={/assets/img/nbgtr-thumb.png},
   title={NB-GTR: Narrow-Band Guided Turbulence Removal},
