--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 @STRING{CVPR = {Proc. of Computer Vision and Pattern Recognition}}
 @STRING{ECCV = {Proc. of European Conference on Computer Vision}}
 @STRING{ICCV = {Proc. of International Conference on Computer Vision}}
-@STRING{NIPS = {Proc. of Advances in Neural Information Processing Systems}}
+@STRING{NIPS = {Adv. in Neural Information Processing Systems}}
 @STRING{ICML = {Proc. of International Conference on Machine Learning}}
 @STRING{AAAI = {Proc. of the AAAI Conference on Artificial Intelligence}}
 @STRING{ICCP = {Proc. of International Conference on Computational Photography}}
@@ -137,13 +137,26 @@
 
 @article{teng2024nfs,
   bibtex_show={true},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10609564},
   thumbnail={/assets/img/nfs-thumb.png},
-  title={Hybrid All-in-focus Imaging from Neuromorphic Focal Stack},
+  title={Hybrid All-in-focus Imaging from Neuromorphic Focal Stack}, 
   author={Teng, Minggui and Lou, Hanyue and Yang, Yixin and Huang, Tiejun and Shi, Boxin},
   journal=PAMI,
   year={2024},
   selected={true}
 }
+
+@inproceedings{lou2024zero,
+  bibtex_show={true},
+  pdf={https://openreview.net/pdf?id=E3ZMsqdO0D},
+  thumbnail={/assets/img/zest.png},
+  title={Zero-Shot Event-Intensity Asymmetric Stereo via Visual Prompting from Image Domain},
+  author={Lou, Hanyue and Liang, Jinxiu and Teng, Minggui and Fan, Bin and Xu, Yong and Shi, Boxin},
+  booktitle=NIPS,
+  year={2024},
+  selected={false}
+}
+
 
 @inproceedings{xia2024nbgtr,
   bibtex_show={true},
@@ -158,3 +171,51 @@
   year={2024},
   selected={false}
 }
+
+@inproceedings{teng2025evrgbdeblur,
+  bibtex_show={true},
+  thumbnail={/assets/img/rgbdeblur-thumb.png},
+  pdf={https://openaccess.thecvf.com/content/ICCV2025W/MIPI/papers/Teng_Monochromatic_Event_Guided_Image_Deblurring_with_Event-triggering-aware_Decomposition_ICCVW_2025_paper.pdf},
+  code={https://github.com/ChipsAhoyM/EvTradeNet},
+  title={Monochromatic Event Guided Image Deblurring with Event-triggering-aware Decomposition},
+  author={Teng, Minggui and Li, Boyu and Yang, Yixin and Zhou, Chu and Chen, Yan and Ren, Jimmy S. and Shi, Boxin},
+  booktitle=ICCVW,
+  year={2025},
+  selected={true}
+}
+
+@article{zhou2025poldeblur,
+  bibtex_show={true},
+  pdf={https://link.springer.com/article/10.1007/s11263-025-02459-7},
+  thumbnail={/assets/img/poldeblur-thumb.png},
+  title={Learning to Deblur Polarized Images},
+  author={Zhou, Chu and Teng, Minggui and Zhou, Xinyu and Xu, Chao and Sato, Imari and Shi, Boxin},
+  journal=IJCV,
+  year={2025},
+  selected={false},
+}
+
+@inproceedings{gao2025evstaic,
+  bibtex_show={true},
+  pdf={https://openaccess.thecvf.com/content/CVPR2025/papers/Gao_Unified_Reconstruction_of_Static_and_Dynamic_Scenes_from_Events_CVPR_2025_paper.pdf},
+  thumbnail={/assets/img/staticev-thumb.png},
+  title={Unified Reconstruction of Static and Dynamic Scenes from Events},
+  author={Gao, Qiyao and Duan, Peiqi and Lou, Hanyue and Teng, Minggui and Cai, Ziqi and Chen, Xu and Shi, Boxin},
+  booktitle=CVPR,
+  pages={27914--27923},
+  year={2025},
+  selected={false}
+}
+
+@article{duan2025eventaid,
+  bibtex_show={true},
+  pdf={https://ieeexplore.ieee.org/abstract/document/10994378},
+  thumbnail={/assets/img/evaid-thumb.png},
+  title={EventAid: Benchmarking event-aided image/video enhancement algorithms with real-captured hybrid dataset},
+  author={Duan, Peiqi and Li, Boyu and Yang, Yixin and Lou, Hanyue and Teng, Minggui and Zhou, Xinyu and Ma, Yi and Shi, Boxin},
+  journal=PAMI,
+  website={https://sites.google.com/view/eventaid-benchmark/home},
+  year={2025},
+  selected={false},
+}
+
